@@ -131,6 +131,11 @@ geometries = 650x50,800x100,1000x200,2000x100
 # look like and how they apply to specific service and data set names.
 colorscheme = 9
 
+# Sets the saturation and value used by color schemes 1-8. The hues are
+# randomly generated based on the characters in the name of each data source.
+#colorsaturation = 0.8
+#colorvalue = 0.95
+
 # Custom color scheme is defined by a comma-separated list of RGB hex colors.
 # rainbow: reddish, orange, yellow, green, light blue, dark blue, purple, grey
 #colors = D05050,D08050,D0D050,50D050,50D0D0,5050D0,D050D0,505050
